06-deploy-ops/03-grafana/grafana-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
   kubernetes.io/ingress.class: "nginx"
   certmanager.k8s.io/issuer: "letsencrypt-staging"
   certmanager.k8s.io/acme-challenge-type: http01
  name: grafana-ui
  namespace: ops
spec:
  tls:
  - hosts:
          - k8s.4711.cloud
    secretName: grafana-ui-secret
  rules:
  - host: k8s.4711.cloud
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 80
        path: /grafana
